# PythonSverkaVsego

./: .gitignore  README.md  main.py  pyproject.toml
design/: modern-document-diff-ui.html
docs/: USER_GUIDE.md  Листинг_программы.txt
docs/superpowers/plans/: 2026-06-12-file-comparison.md  2026-06-12-registry-monitoring.md  2026-06-14-registry-control-suite.md
docs/superpowers/specs/: 2026-06-12-file-comparison-design.md  2026-06-12-registry-monitoring-design.md
packaging/: file-compare-app.spec
src/file_compare_app/: __main__.py  app.py
src/file_compare_app/analyzers/: base.py  binary.py  docx.py  image.py  klp.py  pdf.py  text_config.py  xlsx.py
src/file_compare_app/core/: config_profiles.py  models.py  orchestrator.py  text_diff.py  type_detection.py
src/file_compare_app/diagnostics/: __init__.py  dependencies.py
src/file_compare_app/registry/: __init__.py  database.py  models.py  monitor.py  repository.py
src/file_compare_app/security/: strict_mode.py
tests/: conftest.py  test_app_backend.py  test_binary_analyzer.py  test_compare_worker.py  test_config_profiles.py  test_dependency_diagnostics.py  test_diff_view_renderer.py  test_file_drop_selection.py  test_html_report.py  test_klp_analyzer.py  test_location_display.py  test_models.py  test_modern_ui_design.py  test_optional_analyzers.py  test_orchestrator.py  test_project_metadata.py  test_registry_monitor.py  test_registry_repository.py  test_registry_ui.py  test_strict_mode.py  test_text_config_analyzer.py  test_type_detection.py
tests/fixtures/: sample_new.txt  sample_old.txt
(+5 files in other folders)
