[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-sverka-vsego"
version = "0.1.0"
description = "Local Windows desktop app for comparing documents, configs, images, spreadsheets, PDFs, and binaries"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.7",
  "python-docx>=1.1",
  "PyMuPDF>=1.24",
  "pytesseract>=0.3",
  "Pillow>=10.0",
  "openpyxl>=3.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyinstaller>=6.0",
]

[project.scripts]
python-sverka-vsego = "file_compare_app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
